planet section mobile fixed

--- a/style/carousel.css
+++ b/style/carousel.css
@@ -58,6 +58,10 @@
   z-index: 1;
 }
 
+.carousel_section {
+  margin-top: 14rem;
+}
+
 .carousel_section .logo {
   width: 10.5rem;
 
